<resources>
    <string name="app_name">cobadehgar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="status_info_bar">Kualitas udara di rumah anda "sedang". Udara relatif bersih dengan sedikit partikel debu</string>
    <string name="aqiinfo">AQI Info: %s</string>
    <string name="pminfo">PM Info: %s</string>
    <string name="btnon">ON</string>
    <string name="btnoff">OFF</string>
    <string name="btnauto">AUTO</string>
    <string name="dashtitle">Tingkatan Kualitas Udara</string>
    <string name="backgrounddash">background</string>
    <string name="statusdeclaration">%s</string>

    //Home//
    <string name ="Halo">Halo</string>
    <string name="username"> </string>
    <string name="icon">icon</string>
    <string name="definisi">Kualitas udara rumah anda</string>
    <string name="btndetail">Detail</string>
    //SignUp//
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>

    <string name="judul">Freshism</string>
    <string name="slogan">Stay Fresh, Stay Healthy</string>

</resources>