<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="349dp"
        android:layout_marginBottom="691dp"
        android:fontFamily="@font/croissant_one"
        android:text="@string/Halo"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/bellefair"
        android:text="@string/username"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="157dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryVariant"
                android:contentDescription="@string/icon"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/angin1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/croissant_one"
                android:padding="8dp"
                android:text="@string/definisi"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="25sp" />


        </TableRow>

        <TableRow
            android:id="@+id/placebutton"
            android:layout_width="wrap_content"
            android:layout_height="28dp">

            <Button
                android:id="@+id/detailbtn"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:background="@drawable/img_3"
                android:fontFamily="@font/bellefair"
                android:scaleType="fitCenter"
                android:text="@string/btndetail"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="25sp" />
        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="334dp"
        android:layout_height="255dp"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/textViewCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="@string/status_info_bar"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>